# polyfit

./: CHANGELOG  CONTRIBUTING  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  examples.yml  linter.yml  test.yml
benches/: fitting.rs  numpy_bench.py  root_finding.rs
examples/: adding_noise.rs  amsymptotes.rs  basis_selection.rs  calculus.rs  children_height_data.rs  childrens_height_data.json  fits_for_generating_graphs.rs  generate_logo.rs  outlier_detection.rs  sample_data.json  scaling_transforms.rs  simple_fit.rs  test.rs  transforms.rs  transforms_demo.rs  validating_your_choice_of_basis.rs  whats_an_orthogonal.rs
src/: basis.rs  display.rs  error.rs  fit.rs  lib.rs  plot.rs  plotting.rs  polynomial.rs  score.rs  statistics.rs  test.rs  transforms.rs  value.rs
src/basis/: augmented_fourier.rs  chebyshev.rs  fourier.rs  hermite.rs  laguerre.rs  legendre.rs  logarithmic.rs  monomial.rs
src/basis/augmented_fourier/: fourier.rs  linear_fourier.rs
src/basis/chebyshev/: second_form.rs  third_form.rs
src/display/: unicode.rs
src/plot/: builder.rs  core.rs  element.rs  palette.rs
src/plotting/: backend.rs  element.rs  palette.rs
src/plotting/backend/: plotters.rs
src/score/: basic.rs  shape_constraint.rs
src/statistics/: accumulator.rs  aggregators.rs  confidence.rs  degree_bound.rs  domain_normalizer.rs  is_derivative.rs  k_fold.rs  metrics.rs  uncertain_value.rs
src/test/: assertions.rs  basis_assertions.rs
src/transforms/: adapters.rs  noise.rs  normalization.rs  scale.rs
