[package]
name = "polyfit"
authors = ["@rscarson"]
description = "Because you don't need to be able to build a powerdrill to use one safely"
edition = "2021"
license = "MIT"
version = "1.0.0"
repository = "https://github.com/rscarson/polyfit"

keywords = ["polynomial", "fitting", "regression", "chebyshev", "monomial", "numerical", "approximation"]
categories = ["algorithms", "data-structures", "mathematics", "science", "visualization"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
transforms = ["rand", "rand_distr"]
plotting = ["plotters"]
parallel = ["rayon"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.33"
num-traits = "0.2"
thiserror = "1.0"

# Plotting
plotters = {version = "0.3", optional = true, default-features = false, features = [
    "svg_backend", "bitmap_backend", "bitmap_encoder", "ab_glyph",
    "all_series", "all_elements", "full_palette", "colormaps"
]}

# Transforms
rand = {version = "0.9", optional = true}
rand_distr = {version = "0.5", optional = true}

# Parallel processing
rayon = {version = "1.11", optional = true}

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fitting"
harness = false

[[bin]]
name = "basis_select"
path = "src/bin/basis_select.rs"

[[example]]
name = "whats_an_orthogonal"
required-features = ["transforms", "plotting"]

[[example]]
name = "validating_your_choice_of_basis"
required-features = ["transforms", "plotting"]

[[example]]
name = "transforms"
required-features = ["transforms", "plotting"]

[[example]]
name = "simple_fit"
required-features = ["transforms"]

[[example]]
name = "scaling_transforms"
required-features = ["transforms", "plotting"]

[[example]]
name = "outlier_detection"
required-features = ["plotting"]

[[example]]
name = "generate_logo"
required-features = ["plotting"]

[[example]]
name = "calculus"
required-features = ["plotting"]

[[example]]
name = "adding_noise"
required-features = ["transforms", "plotting"]